# tidyfs

./: Cargo.toml  README.md
docs/: adapters.md  ai-usage.md  architecture.md  implementation-plan.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  parallel-scanning.md  reuse-strategy.md  safety-model.md  threat-model.md
rules/: default.yaml
rules/rules/: default.yaml
src/: actions.rs  adapters.rs  classify.rs  clean.rs  db.rs  explain.rs  main.rs  plan.rs  restore.rs  rules.rs  scan.rs  top.rs  util.rs
