[package]
name = "tidyfs"
version = "0.1.0"
edition = "2021"
description = "Conservative disk usage scanner and cleanup planner for developer machines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryjen/tidyfs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
time = { version = "0.3", features = ["formatting"] }
